# cadcad-workshop

./: .pdm.toml  README.md  pyproject.toml  requirements.txt
1_predator_prey/: Predator_Prey.ipynb
1_predator_prey/model/: experiment.py  parts.py  run.py
2_predator_pray_agent_based_modeling/: Predator_Prey_ABM_model.ipynb
2_predator_pray_agent_based_modeling/model/: run.py
2_uniswap/: lab_notebook.ipynb
2_uniswap/.ipynb_checkpoints/: lab_notebook-checkpoint.ipynb
2_uniswap/data/: uniswap_events.pickle
2_uniswap/model/: data.py  experiment.py  run.py  sim_params.py  state_variables.py  system_parameters.py
2_uniswap/model/parts/: actions.py  deprecate.py  uniswap_model.py
cadCad_1_predator_prey_system_dynamics/.ipynb_checkpoints/: Predator_Prey_SD_model-checkpoint.ipynb
cadCad_1_predator_prey_system_dynamics/model/: config.py
radCad_1_predator_prey/.ipynb_checkpoints/: Predator_Prey-checkpoint.ipynb
radCad_1_predator_prey/model/: experiment.py  parts.py
