[project]
name = ""
version = ""
description = ""
authors = [
    {name = "boqdan", email = "bogdan@bowd.io"},
]
dependencies = [
    "radcad>=0.9.0",
    "jupyter>=1.0.0",
    "numpy>=1.22.4",
    "cadcad>=0.4.28",
    "pandas>=1.4.2",
    "matplotlib>=3.5.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
